<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollable_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="71.5dp">

            <ImageView
                android:id="@+id/detail_course_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/Green"
                android:contentDescription="@string/author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/detail_favourites_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/icon_corner_radius_white"
                android:contentDescription="@string/favourites"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/detail_back_button"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/favourites_tab"
                app:tint="@color/Dark" />

            <ImageView
                android:id="@+id/detail_back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/icon_corner_radius_white"
                android:contentDescription="@string/favourites"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/arrow_back_icon"
                app:tint="@color/Dark" />

            <TextView
                android:id="@+id/detail_course_rating"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="212dp"
                android:background="@drawable/icon_corner_radius_light"
                android:drawableLeft="@drawable/star_icon"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="4.9"
                android:textColor="@color/White"
                app:drawableTint="@color/Green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_course_date"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="212dp"
                android:background="@drawable/icon_corner_radius_light"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="22 мая 2024"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.036"
                app:layout_constraintStart_toEndOf="@+id/detail_course_rating"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_course_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="248dp"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textSize="22sp"
                android:text="Название курса"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/author_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_course_header">

                <ImageView
                    android:id="@+id/author_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_corner_radius_light"
                    android:contentDescription="@string/author"
                    android:padding="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/search_icon" />

                <LinearLayout
                    android:id="@+id/author_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:id="@+id/author_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textColor="@color/WhiteDark"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/author_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:maxLines="1"
                        android:text="Stepik Int"
                        android:textColor="@color/White"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/start_course_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/start_course"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_row" />

            <Button
                android:id="@+id/open_platform_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/DarkGray"
                android:text="@string/open_platform"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_course_button" />

            <TextView
                android:id="@+id/about_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/about_course"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/open_platform_button" />

            <TextView
                android:id="@+id/course_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/long_test_string"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_course" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>